# string-algorithms

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
docs/: KMP.md
include/: CMakeLists.txt  KMP.hpp
src/: CMakeLists.txt  KMP.cpp
